# ads7830

./: CMakeLists.txt  README.md
src/: ads7830.c
test/: ads7830.json  vars.json
